name:                grav
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/qwertzdarth/grav#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Kilian
maintainer:          lukas.kilian@outlook.at
copyright:           Copyright: (c) 2016 Lukas Kilian
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable grav
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Vector
  ghc-options:         -O3 -threaded -with-rtsopts=-N -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , time
                     , parallel
                     , deepseq
                     , gloss
